[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["datastock"]


[tool.setuptools_scm]
# enables use of setuptools_scm

[tool.setuptools.dynamic]
version = {attr = "datastock.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.md"]}
classifiers = {file = ["CLASSIFIERS.txt"]}
# dependencies = {file = ["DEPENDENCIES.txt"]}


[project]
name = "datastock"
license = {file = "LICENSE"}
dynamic = ["version", "readme", "classifiers"]
description = "Generic handler for multiple heterogenous numpy arrays and subclasses"
authors = [
    {name = "Didier VEZINET", email = "didier.vezinet@gmail.com"},
]
maintainers = [
    {name = "Didier VEZINET", email = "didier.vezinet@gmail.com"},
]
keywords = [
    "data", "analysis", "interactive", "heterogeneous arrays", "numpy", "Collection",
]
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
]


[project.urls]
Homepage = "https://github.com/ToFuProject/datastock"
Issues = "https://github.com/ToFuProject/datastock/issues"


[project.entry-points."datastock"]
datastock = "scripts.main:main"


[dependency-groups]
dev = [
	"pytest",
]


[project.optional-dependencies]
linting = [
  'ruff'
]
formatting = [
  'ruff'
]
