[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["datastock"]
include = ["datastock*"]
namespaces = false


[tool.setuptools_scm]
version_file = "datastock/_version.py"


[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
classifiers = {file = ["CLASSIFIERS.txt"]}
dependencies = {file = ["DEPENDENCIES.txt"]}


[project]
name = "datastock"
license = "MIT"
dynamic = ["version", "readme", "classifiers"]
description = "Generic handler for multiple heterogenous numpy arrays and subclasses"
authors = [
    {name = "Didier VEZINET", email = "didier.vezinet@gmail.com"},
]
maintainers = [
    {name = "Didier VEZINET", email = "didier.vezinet@gmail.com"},
]
keywords = [
    "data", "analysis", "interactive", "heterogeneous arrays", "numpy", "Collection",
]
requires-python = ">=3.8"


[project.urls]
Homepage = "https://github.com/ToFuProject/datastock"
Issues = "https://github.com/ToFuProject/datastock/issues"


[project.entry-points."datastock"]
datastock = "scripts.main:main"


[dependency-groups]
dev = [
	"pytest",
]


[project.optional-dependencies]
linting = [
  'ruff'
]
formatting = [
  'ruff'
]
